style.css
/*---------------------------------------------------------------------------------



 Theme Name:   Kiwi Solutions Child Theme

 Theme URI:    https://modern-websites.de

 Description:  

 Author:       Kiwi Solutions

 Author URI:   https://modern-websites.de

 Template:     Divi

 Version:      1.0.0

 License:      GNU General Public License v2 or later

 License URI:  http://www.gnu.org/licenses/gpl-2.0.html



------------------------------ ADDITIONAL CSS HERE ------------------------------*/

/* ************************************************* */
/* ************************************************* */
/* ************************************************* */
/* ************************************************* */
/* *                     GENERAL                     */
/* ************************************************* */
/* ************************************************* */
/* ************************************************* */
/* ************************************************* */

/*! Delete this two code snippets as far we use other Plugins like Table Press etc. */
/*? ************************************************ */
/*?                 AR FORMS SUPPORT                 */
/*? ************************************************ */

/*========= Don't use AR Forms, so right now not nesseccary======
/*.arf_confirmation_summary_inner_wrapper .con_dis_none {
  display: none;
}*/
/*===============================================================*/
/*? ************************************************ */
/*?                 AR PRICE SUPPORT                 */
/*? ************************************************ */

/*========= Don't use AR Price, so right now not nesseccary======
.arptemplate_105 .ArpPricingTableColumnWrapper {
  width: 240px !important;
}*/
/*===============================================================*/
/*! =============================================================================== */



/*? *********************************************** */
/*?                 FONT ADJUSMENT                  */
/*? *********************************************** */

/*===================font adjustment for small desktop=======================*/
@media all and (min-width: 1405px) {
  h1 {
    font-size: 58px !important;
  }
  
  .sub_headline {
    font-size: 45px !important;
  }
}
/*===========================================================================*/

/*? *********************************************** */
/*?                 BUTTON ALIGNMENT                */
/*? *********************************************** */

/* =========BUTTON INLINE LEFT========*/

@media all and (min-width: 768px) {
  #btn_align_left_row .et_pb_column {
    display: flex;
  }
}

/* =========BUTTON INLINE CENTER========*/

@media all and (min-width: 768px) {
  #btn_align_center_row .et_pb_column {
    display: flex;
    justify-content: center;
  }
}

/*TODO check if this code is just up to date */
/*==========BUTTON CORRECTION==========

  @media all and (min-width: 768px and max-width: 980px){
    
   #btn_align_left_row .et_pb_column .et_pb_button_module_wrapper {
     
     margin-bottom: 0px !important;
     
     margin-right: 20px !important;

    }

  }*/

/* =========BUTTON INLINE RIGHT========

#btn_fix_right
  #design_logo_standard_btn_active
  #design_logo_standard_btn_inactive
  #design_logo_pro_btn_active
  #design_logo_pro_btn_inactive
  .et_pb_column
  .et_pb_button_module_wrapper {
    float: left;
}

#btn_fix_right .et_pb_column {
  display: flex;
  
  justify-content: flex-end;
}

.hosting_button_active .et_pb_column {
  border-bottom: 4px solid #2372f5 !important;
}
*/
/*TODO=======================================*/

/*? *********************************************** */
/*?                     IMG INLINE                  */
/*? *********************************************** */

/*TODO check if display flex is possible */
/* =========IMG INLINE LEFT========*/

.img_inline {
  display: inline-block;
  
  margin-right: 10px;
}
/*=================================*/

/* =========IMG INLINE CENTER========*/
.img_inline_center_row .et_pb_column {
  display: flex;
  
  justify-content: center;
}

.img_inline_center {
  display: inline-block;
  
  margin-right: 40px;
}
/*===================================*/
/*TODO===================================*/

/*? ************************************************ */
/*?                 CONTACT BUTTON                   */
/*? ************************************************ */
/*===================make the the calendly link appeear as button=======================*/
.contact_button_tablet_desktop,
.contact_button_mobile {
  border: 1px solid #17381b;
  background-color: #17381b;
  border-radius: 3px;
}

.contact_button_tablet_desktop {
  padding: 25px 40px;
}

.contact_button_mobile {
  padding: 13px 20px;
  display: none;
}

@media all and (max-width:980px) {
  .contact_button_tablet_desktop {
    padding: 13px 20px;
  }
}
/*======================================================================================*/

/* ************************************************* */
/* ************************************************* */
/* ************************************************* */
/* ************************************************* */
/* *                      HOME                       */
/* ************************************************* */
/* ************************************************* */
/* ************************************************* */
/* ************************************************* */

/*? *********************************************** */
/*?        CUSTOMER REVIEW SLIDER PREFERENCES       */
/*? *********************************************** */

/*===================remove text shadow=======================*/
.page-id-28567 .et_pb_bg_layout_dark .et_pb_slide_description {
  text-shadow: none;
}
/*============================================================*/

/*TODO fix comments to new comment-structure (see above)*/
/*style fonts for customer name and job*/

.page-id-28567 .home_customer-review_slider_name {
  font-weight: 500;
  
  font-size: 24px;
}

.page-id-28567 .home_customer-review_slider_job {
  font-family: "Lato", Helvetica, Arial, Lucida, sans-serif;
  
  color: #6b6b6b;
}

/* font size correction to 16px*/

.page-id-28567 .et_pb_slide_content,
.et_pb_best_value {
  font-size: 16px;
}
/*TODO=======================================*/

/*? *********************************************** */
/*?    SECTION SERVICE SHOW HIDE @MEDIA 1365px      */
/*? *********************************************** */

/*TODO Replace .et_pb_row.et_pb_row_10 with id/class

  /*Show Row for mobile view*/

@media all and (max-width: 1365px) {
  .page-id-28567 #home_weitere-leistungen_tablet-mobile {
    display: block;
  }

  .page-id-28567 #home_weitere-leistungen_desktop {
    display: none;
  }
}

/*Show Row for Desktop view*/

@media all and (min-width: 1366px) {
  .page-id-28567 #home_weitere-leistungen_tablet-mobile {
    display: none;
  }

  .page-id-28567 #home_weitere-leistungen_desktop {
    display: block;
  }
}

/*? *********************************************** */
/*?     SEO TEXT RESPONSIVE VIEWS CORRECTION        */
/*? *********************************************** */

@media all and (min-width: 1366px) {
  /*=================== SEO Text 1 ===================*/

  .page-id-28567 .home_seo-text1_row-text-button {
    overflow: hidden;

    left: -20%;

    right: auto;

    width: 40%;

    background-color: transparent;

    padding: 0px !important;
  }

  /*==================================================*/

  /*=================== SEO Text 2 ===================*/

  .page-id-28567 .home_seo-text2_row-text-button {
    overflow: hidden;

    left: auto;

    right: -20%;

    width: 40%;

    background-color: transparent;

    padding: 0px !important;
  }

  /*==================================================*/
}

@media all and (min-width: 1800px) {
  /*=================== SEO Text 1 ===================*/

  .page-id-28567 .home_seo-text1_row-text-button {
    overflow: hidden;

    left: -15%;

    right: auto;

    width: 35%;

    background-color: transparent;

    padding: 5% !important;
  }

  /*==================================================*/

  /*=================== SEO Text 2 ===================*/

  .page-id-28567 .home_seo-text2_row-text-button {
    overflow: hidden;

    left: auto;

    right: -15%;

    width: 35%;

    background-color: transparent;

    padding: 5% !important;
  }

  /*==================================================*/
}

/*? ************************************************ */
/*?                REFERENCES SECTION                */
/*? ************************************************ */

/*==========change width of the reference-logos on tablets and mobile===========*/
@media all and (max-width:980px) {
  #home_references_row_logos .et_pb_column {
    width: 33%;
  }
}
/*=============================================================================*/
/* ************************************************* */
/* ************************************************* */
/* ************************************************* */
/* ************************************************* */
/* *                   HOSTING                       */
/* ************************************************* */
/* ************************************************* */
/* ************************************************* */
/* ************************************************* */

/*? *********************************************** */
/*?         INTEGRATION OF PLUGIN WHOIS             */
/*? *********************************************** */

/*========HOSTING=========*/

#whois #domain {
  display: inline-block;

  -webkit-box-sizing: content-box;

  -moz-box-sizing: content-box;

  box-sizing: content-box;

  width: 40%;

  height: 40px;

  cursor: pointer;

  padding: 10px 20px;

  border: 1px solid #b7b7b7;

  -webkit-border-radius: 3px;

  border-radius: 3px;

  font: normal 16px / normal "lato", Helvetica, sans-serif;

  color: #4f4f4f;

  -o-text-overflow: clip;

  text-overflow: clip;

  background: rgba(255, 255, 255, 1);
}

#whois #tld {
  display: inline-block;

  -webkit-box-sizing: content-box;

  -moz-box-sizing: content-box;

  box-sizing: content-box;

  /* width: 40%; */

  height: 40px;

  cursor: pointer;

  padding: 10px 20px;

  border: 1px solid #b7b7b7;

  -webkit-border-radius: 3px;

  border-radius: 3px;

  font: normal 16px / normal "lato", Helvetica, sans-serif;

  color: #4f4f4f;

  -o-text-overflow: clip;

  text-overflow: clip;

  background: rgba(255, 255, 255, 1);
}

#whois #whoissubmit {
  display: inline-block;

  -webkit-box-sizing: content-box;

  -moz-box-sizing: content-box;

  box-sizing: content-box;

  height: 40px;

  cursor: pointer;

  padding: 10px 40px;

  border: none;

  -webkit-border-radius: 3px;

  border-radius: 3px;

  font: normal 16px / normal "lato", Helvetica, sans-serif;

  color: rgba(255, 255, 255, 1);

  -o-text-overflow: clip;

  text-overflow: clip;

  background: #2372f5;
}

